--- a/03-frontend/angular-ecommerce/package.json
+++ b/03-frontend/angular-ecommerce/package.json
@@ -20,6 +20,9 @@
     "@angular/router": "^16.2.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@ng-bootstrap/ng-bootstrap": "^15.1.1",
+    "@okta/okta-angular": "^6.2.0",
+    "@okta/okta-auth-js": "^7.4.1",
+    "@okta/okta-signin-widget": "^6.2.0",
     "bootstrap": "^5.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
