Added order history feature

--- a/02-backend/spring-boot rest api/src/main/resources/application.properties
+++ b/02-backend/spring-boot rest api/src/main/resources/application.properties
@@ -6,3 +6,12 @@ spring.datasource.password=springstudent
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.data.rest.base-path=/api
+
+allowed.origins=http://localhost:4200
+
+spring.data.rest.detection-strategy=ANNOTATED
+
+okta.oauth2.client-id=0oab0lzwjoN1Rjsar5d7
+
+okta.oauth2.issuer=https://dev-82108115.okta.com/oauth2/default
+
